--- a/index.html
+++ b/index.html
@@ -1,23 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
     <title>Lala's Portfolio</title>
 </head>
+
 <body>
     <section id="header">
-        <div class="container">
-            <nav>
-                <div class="logo"></div>
-                <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Skills</a></li>
-                </ul>
-            </nav>
+        <a class="logo" href=""><img src="" alt=""><img src="image/logo.png" alt=""></a>
+        <nav>
+            <ul>
+                <li><a class="active" href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Skills</a></li>
+                <li><a href="">Blog</a></li>
+            </ul>
+        </nav>
+        <div class="links">
+            <a href=""><i class="fa-brands fa-linkedin fa-xl"></i></a>
+            <a href=""><i class="fa-brands fa-github fa-xl"></i></a>
+            <a href=""><i class="fa-brands fa-behance fa-xl"></i></a>
         </div>
     </section>
+
+    <section id="intro">
+        <div class="wrapper">
+            <div class="cols cols0">
+                <span class="topline">Hello</span>
+                <h1>I'm <span class="multitext">Coder</span></h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero vitae, qui eos iure commodi tenetur
+                    voluptatibus ipsa, laboriosam tempora fugiat nostrum quisquam vero. Iste excepturi necessitatibus
+                    cumque laboriosam libero dicta?</p>
+                    <div class="btns">
+                        <button>Download CV</button>
+                        <button></button>
+                    </div>
+            </div>
+        </div>
+    </section>
+
 </body>
+
 </html>
