background images and text updated

--- a/index.html
+++ b/index.html
@@ -25,24 +25,31 @@
             </ul>
         </nav>
         <div class="links">
-            <a href=""><i class="fa-brands fa-linkedin fa-xl"></i></a>
-            <a href=""><i class="fa-brands fa-github fa-xl"></i></a>
-            <a href=""><i class="fa-brands fa-behance fa-xl"></i></a>
+            <a href="https://www.linkedin.com/in/lala-jumayeva98/"><i class="fa-brands fa-linkedin fa-xl"></i></a>
+            <a href="https://github.com/LalaJumayeva"><i class="fa-brands fa-github fa-xl"></i></a>
+            <a href="https://www.behance.net/lalacumayeva"><i class="fa-brands fa-behance fa-xl"></i></a>
         </div>
     </section>
 
     <section id="intro">
-        <div class="wrapper">
-            <div class="cols cols0">
-                <span class="topline">Hello</span>
-                <h1>I'm <span class="multitext">Coder</span></h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero vitae, qui eos iure commodi tenetur
-                    voluptatibus ipsa, laboriosam tempora fugiat nostrum quisquam vero. Iste excepturi necessitatibus
-                    cumque laboriosam libero dicta?</p>
-                    <div class="btns">
-                        <button>Download CV</button>
-                        <button></button>
-                    </div>
+        <div class="cols cols0">
+            <span class="topline">Hello</span>
+            <h1>I'm <span class="multitext">Coder</span></h1>
+            <p>In addition to my studies, I have 1 year of Web Design
+                experience. I have developed and maintained web
+                applications using JavaScript, HTML5, CSS, Bootstrap, MongoDB (mongoose) database, Nodejs, and Express.
+                Feel free to check out the projects on my GitHub and Behance profiles. I am eager to continue learning
+                and applying my skills to real- world projects!
+            </p>
+            <div class="btns">
+                <button class="btn btn-dark">Download CV</button>
+                <button class="btn btn-outline-dark">Contact Me</button>
+            </div>
+        </div>
+        <div class="cols cols1">
+            <div class="imgbox">
+                <img src="image/Group 2.png" id="splash">
+                <img src="image/myen.png" alt="">
             </div>
         </div>
     </section>
