--- a/about.html
+++ b/about.html
@@ -12,6 +12,11 @@
     <link rel="stylesheet" href="styles.css">
     <title>Lala's Portfolio</title>
 </head>
+<style>
+    body {
+        overflow-x: hidden;
+    }
+</style>
 
 <body>
     <section id="header">
@@ -44,8 +49,9 @@
     </section>
 
     <section id="greeting">
+        <img id="colorsplash" src="image/Ellipse 1.png">
         <div class="image">
-            <img src="image/aboutlala.jpg" alt="">
+            <img id="myphoto" src="image/aboutlala.jpg" alt="">
         </div>
         <div class="texts">
             <h1>Hi there!</h1>
@@ -57,7 +63,7 @@
 
     <section id="storyline">
         <div class="maintext">
-            <h3>My Career So Far</h3>
+            <h2>My Career So Far</h2>
             <p>Always up for a challenge! I'm a MSc student in engineering in Hungary. I worked as a UI/UX
                 Designer at TestMarket.io in 2020-2021. The company is based on B2B2C model that the goal is to
                 create a mutually beneficial relationship between suppliers of goods and services and online
@@ -82,11 +88,11 @@
                     <tbody>
                         <tr>
                             <td>Biomedical Technology Engineering(BSc)</td>
-                            <td>Azerbaijan State Oil and Industry University</td>
+                            <td>Azerbaijan State Oil and Industry University (2016-2021)</td>
                         </tr>
                         <tr>
                             <td>Biomedical Engineering(MSc)</td>
-                            <td>University of Pécs</td>
+                            <td>University of Pécs (2021-2023)</td>
                         </tr>
                     </tbody>
                 </table>
@@ -122,7 +128,43 @@
         </div>
     </section>
 
-    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <section id="hobbies">
+        <h2>Interests/Hobbies</h2>
+        <div class="hobby">
+            <div class="container">
+                <div class="list">
+                    <p><strong>Films/Series</strong></p>
+                    <p>- Rick and Morty</p>
+                    <p>- The Office</p>
+                    <p>- Arcane</p>
+                    <p>- Queen's Gambit</p>
+                    <p>- Ghibli Movies</p>
+                </div>
+                <img src="image/rickandmorty.jpg">
+            </div>
+            <div class="container">
+                <div class="list">
+                    <p><strong>Video Games</strong></p>
+                    <p>- Prince of Persia</p>
+                    <p>- Combat</p>
+                    <p>- Leage of Legends</p>
+                    <p>- The Sims</p>
+                    <p>- Minecraft</p>
+                </div>
+                <img src="image/princeofpersia.jpg">
+            </div>
+        </div>
+        <div class="container-2">
+            <div class="list">
+                <p><strong>Other Activities</strong></p>
+                <p>- Chess(playing sometimes)</p>
+                <p>- Climbing</p>
+                <p>- Reading(sci-fi, psychology)</p>
+                <p>- Drawing(surreal style)</p>
+                <p>- Meditation</p>
+            </div>
+        </div>
+    </section>
     <script src="index.js"></script>
 </body>
 
