--- a/skills.html
+++ b/skills.html
@@ -54,7 +54,7 @@
             <table>
                 <thead>
                     <tr>
-                        <td><strong>Key Skills✨</strong></td>
+                        <td id="theadtext"><strong>Key Skills✨</strong></td>
                     </tr>
                 </thead>
                 <tbody>
