responsive css property updated

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
     body{
         overflow: hidden;
     }
+    
+        @media (max-width: 570px) {
+
+        body {
+            overflow: auto;
+        }
+    }
 </style>
 <body>
     <section id="header">
