--- a/index.html
+++ b/index.html
@@ -13,17 +13,18 @@
     <title>Lala's Portfolio</title>
 </head>
 <style>
-    body{
+    body {
         overflow: hidden;
     }
-    
-        @media (max-width: 570px) {
+
+    @media (max-width: 570px) {
 
         body {
             overflow: auto;
         }
     }
 </style>
+
 <body>
     <section id="header">
         <a class="logo" href="index.html"><img src="image/logo.png" alt=""></a>
@@ -35,7 +36,8 @@
                 <li><a href="contact.html">Contact</a></li>
                 <a href="#" id="close"><i class="fa-solid fa-xmark"></i></a>
                 <div class="links-mob">
-                    <a href="https://www.linkedin.com/in/lala-jumayeva98/"><i class="fa-brands fa-linkedin fa-xl"></i></a>
+                    <a href="https://www.linkedin.com/in/lala-jumayeva98/"><i
+                            class="fa-brands fa-linkedin fa-xl"></i></a>
                     <a href="https://github.com/LalaJumayeva"><i class="fa-brands fa-github fa-xl"></i></a>
                     <a href="https://www.behance.net/lalacumayeva"><i class="fa-brands fa-behance fa-xl"></i></a>
                 </div>
@@ -65,7 +67,8 @@
             </p>
             <div class="btns">
                 <button class="btn btn-dark">Download CV</button>
-                <button type="button" onclick="location.href='contact.html'" class="btn btn-outline-dark">Contact Me</button>
+                <button type="button" onclick="location.href='contact.html'" class="btn btn-outline-dark">Contact
+                    Me</button>
             </div>
         </div>
         <div class="cols cols1">
@@ -77,6 +80,14 @@
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <script>let t = new Typed(".multitext", {
+            strings: ["coder", "designer"],
+            loop: true,
+            typeSpeed: 100,
+            backSpeed: 80,
+            backDelay: 1500
+        })
+    </script>
     <script src="index.js"></script>
 </body>
 
