--- a/about.html
+++ b/about.html
@@ -16,6 +16,13 @@
     body {
         overflow-x: hidden;
     }
+
+
+    @media (min-width:570px) and (max-width: 950px) {
+        body {
+            overflow-x: hidden;
+        }
+    }
 </style>
 
 <body>
