--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
             overflow: auto;
         }
     }
+
+    @media (min-width:570px) and (max-width: 950px) {
+        body {
+            overflow: hidden;
+        }
+    }
 </style>
 
 <body>
